# sample-actix-rust-webapi

./: .env  .env.prod  Cargo.toml  Dockerfile  README.md
src/: error.rs  main.rs
src/config/: env.rs
src/controller/: admin_controller.rs  auth_controller.rs  mod.rs  post_controller.rs  role_controller.rs  user_controller.rs
src/dto/: mod.rs  role.rs  user.rs
src/entity/: mod.rs  post.rs  post_image.rs  role.rs  user.rs
src/query/: role.rs  user.rs
src/service/: auth.rs  mod.rs  role.rs  user.rs
src/utils/: encryption.rs  jwt.rs  mod.rs  swagger_docs.rs
