[package]
name = "sample-actix-rust-webapi"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7"
actix-web = "4"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dotenv = "0.15"
headers = "0.4"
jsonwebtoken = "9"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "runtime-async-std-native-tls",
    "rust_decimal",
    "postgres",
    "migrate",
    "macros",
    "chrono",
    "uuid",
] }
thiserror = "1"
uuid = { version = "1.6", features = ["serde", "v4"] }
validator = { version = "0.16", features = ["derive"] }